# kernelmind-framework

./: .gitignore  README.md  pyproject.toml  setup.py
docs/: guide.md  index.md
examples/: agent_qa.py
kernelmind/: core.py
tests/: test_kernelmind_core.py
