[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kernelmind"
version = "0.1.0"
description = "A minimalist thinking kernel for LLM agents"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ethan Zhan", email = "jiezhan1@gmail.com"}
]
keywords = ["ai", "agents", "llm", "workflow", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8.1"
dependencies = [
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "numpy>=1.21.0",
    "setuptools>=75.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/zhanj/kernelmind-framework"
Repository = "https://github.com/zhanj/kernelmind-framework"
Documentation = "https://github.com/zhanj/kernelmind-framework#readme"
Issues = "https://github.com/zhanj/kernelmind-framework/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["kernelmind*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
